# trading-bot

./: .gitignore  EVALUATION_VISUALIZATION_GUIDE.md  MODEL_EVALUATION_GUIDE.md  SHORT_SELLING_IMPLEMENTATION.md  Test_framework.ipynb  Test_framework_detailed.ipynb  Test_functions.ipynb  eval.py  pyproject.toml  requirements.txt  train.py
models/TSLA/: keras_metadata.pb  saved_model.pb
models/TSLA/variables/: variables.data-00000-of-00001  variables.index
models/TSLA_1/: saved_model.pb
models/model_debug_10/: saved_model.pb
models/model_debug_10/variables/: variables.data-00000-of-00001  variables.index
models/model_debug_20/: saved_model.pb
models/model_debug_20/variables/: variables.data-00000-of-00001  variables.index
models/model_debug_30/: saved_model.pb
models/model_debug_30/variables/: variables.data-00000-of-00001  variables.index
models/model_debug_40/: saved_model.pb
models/model_debug_40/variables/: variables.data-00000-of-00001  variables.index
models/model_debug_50/: keras_metadata.pb  saved_model.pb
models/model_debug_50/variables/: variables.data-00000-of-00001  variables.index
scripts/: README.md  normalize_csv_files.py  train_eval_framework.py
trading_bot/: agent.py  methods.py  ops.py  utils.py
