[tool.poetry]
name = "trading_bot"
version = "0.0.1"
description = "Automated Stock Trading via Deep Q-Learning"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.10.0"
pandas = "^1.5.0"
numpy = "^1.21.0"
tqdm = "^4.64.0"
docopt = "^0.6.2"
coloredlogs = "^15.0"
jupyterlab = "^3.0.0"
altair = "^4.0.0"
seaborn = "^0.12.0"
